--- a/premedia/edetailers/test.html
+++ b/premedia/edetailers/test.html
@@ -73,7 +73,7 @@
 			</div>
 		</div>
 	</div>
-	<script src='http://code.jquery.com/jquery-3.3.1.slim.min.js'></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 	<script src="./jquery.keyframes.min.js"></script>
 	<script type="text/javascript">
 		function circleIn(el) {
