--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -12,22 +12,26 @@
 		Header
 	</nav>
 	<div id="fullpage">
-		<div class="section">
+		<div id="home" class="section">
 			<div class="grid container">
-				<div class="column bigger">
+				<div class="column big">
 				</div>
 				<div class="column">
-					<h2>A Global eDetailing Development Partner to Brands and Agencies</h2>
+					<h1>A Global eDetailing Development Partner to Brands and Agencies</h1>
 					<p>We collaborate seamlessly with companies and local agencies to develop, localise, adapt and distribute visual aids using the platform of your choice.</p>
 					<p>We understand that local agencies often understand the local market best, and recommend that design and strategy is done by them.</p>
+					<button class="btn accent-blue">
+						Request a Demo
+					</button>
 				</div>
 			</div>
 		</div>
-		<div class="section">
+		<div id="eDetailers" class="section">
 			<div class="container">
 				<div class="grid">
-					<div class="column">
-						<h2>eDetailer Development</h2>
+					<div class="column info-panel">
+						<h1>eDetailer Development</h1>
+						<hr>
 						<div>
 							<p>We develop visual aid (eDetailing) campaigns that utilise the full potential of your chosen multichannel platform.</p>
 							<p>We are platform agnostic and certified with Veeva, IQVIA MiTouch, IQVIA OCE and Viseven.</p>
@@ -36,15 +40,15 @@
 					</div>
 					<div class="column bigger"></div>
 				</div>
-				<div class="grid column-center">
-					<div class="column">eDetailer Development</div>
-					<div class="column">Certified with Veeva, OCE and IQVIA</div>
-					<div class="column">Asset Management</div>
-					<div class="column">Translations & Localisations</div>
+				<div class="grid column-center service-panel">
+					<div class="column">eDetailer Development<hr></div>
+					<div class="column">Certified with Veeva,<br> OCE and IQVIA<hr></div>
+					<div class="column">Asset<br> Management<hr></div>
+					<div class="column">Translations &<br> Localisations<hr></div>
 				</div>
 			</div>
 		</div>
-		<div class="section">
+		<div id="certifications" class="section">
 			<div class="container">
 				<h2>Certifications</h2>
 				<div class="grid column-center">
@@ -54,64 +58,66 @@
 				</div>
 			</div>
 		</div>
-		<div class="section fp-auto-height-responsive">
-			<div class="container">
-				<h2>Services</h2>
+		<div id="services" class="section fp-auto-height-responsive">
+			<div class="container bigger">
 				<div class="grid">
-					<div class="column">
+					<div class="column development">
 						<h3>Development</h3>
-						<div>
+						<p>
 							We provide full translation services, focusing on technical precision and accurately sharing information with the support of best-in-class technology.
-						</div>
+						</p>
 					</div>
-					<div class="column">
+					<div class="column localisation">
 						<h3>Localisation</h3>
-						<div>
+						<p>
 							We use assets to localise edetailers to meet your countries requirements
-						</div>
+						</p>
 					</div>
-					<div class="column">
+					<div class="column translation">
 						<h3>Translation</h3>
-						<div>
+						<p>
 							We provide full translation services, focusing on technical precision and accurately sharing information with the support of best-in-class technology.
-						</div>
+						</p>
 					</div>
-					<div class="column">
+					<div class="column transcreation">
 						<h3>Transcreation</h3>
-						<div>
+						<p>
 							We make sure the intended effect of your message doesn’t get lost in translation. We ensure your copy remains natural, culturally relevant, and dynamic—worldwide.
-						</div>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="section fp-auto-height-responsive">
-			<div class="container">
-				<h2>How We Work</h2>
-				<div class="grid column-center">
-					<span class="column">Our Model</span>
+			<div id="how-we-work" class="container">
+				<div class="title">
+					<h2>How We Work</h2>
+					<hr>
+				</div>
+				<div class="grid column work-selector">
+					<span class="column active">Our Model</span>
 					<span class="column">Our Process</span>
 				</div>
-				<div class="grid column-center">
+				<div class="grid work-container">
 					<div class="column">
-						<h4>Partnership</h4>
+						<h3>Partnership</h3>
 						<p>We align ourselves to your operational and cultural needs. We’re confident in our development strengths and know where and how to work with agencies and specialist in your country.</p>
 					</div>
 					<div class="column">
-						<h4>Flexible Delivery</h4>
+						<h3>Flexible Delivery</h3>
 						<p>With the use of video conferencing, online meetings and efficient file sharing, we provide a connected and seamless service that works for you, irrespective of where you are.</p>
 					</div>
 					<div class="column">
-						<h4>Transparency</h4>
+						<h3>Transparency</h3>
 						<p>We’re an open book. You’ll always have complete clarity on what is being done, by who, when and at what cost.</p>
 					</div>
 				</div>
 				<div class="btn-container">
-					<button>Get in Touch</button>
+					<button class="btn">Get in Touch</button>
 				</div>
 			</div>
 		</div>
-		<div class="section">
+		<div id="map" class="section">
 			<div class="container">
 				<h2>Countries we work with</h2>
 				<div class="grid column-center">
@@ -121,44 +127,44 @@
 				</div>
 			</div>
 		</div>
-		<div class="section fp-auto-height-responsive">
-			<div class="container">
+		<div id="about" class="section fp-auto-height-responsive">
+			<div class="container bigger">
 				<div class="grid">
 					<div class="column">
-						<h2>About Us</h2>
-						<div>
-							<p>Vakils Premedia is a subsidiary of Vakils, a family business for over 70 years now.</p>
-							<p>It was founded in 2004 and began operations in 2007. We are based in India with a team size of 120 and with sales offices in the UK and the US.</p>
-							<p>We work with clients across Europe, Asia Pacific, Australia, North and Latin America.</p>
+						<div class="info-panel">
+							<h2>About Us</h2>
+							<hr>
+							<div>
+								<p>Vakils Premedia is a subsidiary of Vakils, a family business for over 70 years now.</p>
+								<p>It was founded in 2004 and began operations in 2007. We are based in India with a team size of 120 and with sales offices in the UK and the US.</p>
+								<p>We work with clients across Europe, Asia Pacific, Australia, North and Latin America.</p>
+							</div>
 						</div>
 					</div>
-					<div class="column bigger"></div>
-				</div>
-				<div class="grid">
-					<div class="column"></div>
-					<div class="column bigger">
+					<div class="column bigger business-panel">
 						<h3>Our three main areas of business are</h3>
 						<div class="grid">
 							<div class="column">
-								<h4>IT Services</h4>
-								<div>IT services which include eDetailers, website design development and migrations, emailers and custom software.</div>
+								<h3>IT Services</h3>
+								<p>IT services which include eDetailers, website design development and migrations, emailers and custom software.</p>
 							</div>
 							<div class="column">
-								<h4>Pharma Artwork</h4>
-								<div>Pharmaceutical Artwork and Labeling Compliance.</div>
+								<h3>Pharma Artwork</h3>
+								<p>Pharmaceutical Artwork and Labeling Compliance.</p>
 							</div>
 							<div class="column">
-								<h4>Premedia Services</h4>
-								<div>Premedia services which included Typesetting, colour retouching, image cutouts, data sheets etc.</div>
+								<h3>Premedia Services</h3>
+								<p>Premedia services which included Typesetting, colour retouching, image cutouts, data sheets etc.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="section" data-tooltip="Contact">
+		<div  id="contact" class="section">
 			<div class="container">
 				<h2>Let’s work together</h2>
+				<hr>
 				<div>
 					<h3>Contact</h3>
 					<div>
@@ -177,19 +183,17 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="./js/jquery.slim.min.js"></script>
 	<script type="text/javascript" src="./js/fullpage.min.js"></script>
 	<script type="text/javascript">
 		new fullpage('#fullpage', {
 			licenseKey:'8C4EBEC6-9FCF4B75-B31BA128-7DF9ADB6',
 			autoScrolling:true,
-			// anchors:['Home', 'eDetailers', 'Certifications','Services', 'How-We-Work', 'Map','About', 'Contact'],
+			// anchors:['home', 'eDetailers', 'certifications','services', 'how-we-work', 'map','about', 'contact'],
 			navigation: true,
 			navigationTooltips: ['Home', 'eDetailers', 'Certifications','Services', 'How We Work', 'Map','About', 'Contact'],
-			sectionsColor: ['#FFF', '#FAFAFA','#FFF', '#FAFAFA','#FBFBFB', '#FFF','#FBFBFB', '#FAFAFA'],
-			// verticalCentered: false,
 			responsiveWidth: 600,
-			// fixedElements: '#header',
+			css3: true
 		});
 		fullpage_api.setAllowScrolling(true);
 	</script>
