add south africa

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -198,7 +198,7 @@
 			responsiveWidth: 600,
 			css3: true
 		});
-		const COUNTRIES = ['ch', 'gb', 'at', 'dk', 'de', 'fr', 'ie', 'mx', 'ar', 'sg', 'kr', 'my', 'be', 'hk', 'au', 'us'];
+		const COUNTRIES = ['ch', 'gb', 'at', 'dk', 'de', 'fr', 'ie', 'mx', 'ar', 'sg', 'kr', 'my', 'be', 'hk', 'au', 'us', 'za'];
 		$(document).ready(function() {
 			$('#vmap').vectorMap({
 				map: 'world_en',
