--- a/premedia/edetailers/test.html
+++ b/premedia/edetailers/test.html
@@ -43,6 +43,12 @@
 		#red {
 			left: 75vw;
 		}
+		.square {
+			border: solid 4px #f0f;
+  			width: 10px;
+  			height: 10px;
+  			border-radius: 50px;
+		}
 	</style>
 </head>
 <body>
@@ -53,6 +59,7 @@
 		<div id="overlay" class="circle">
 			<button id="close" onclick="circleOut(this)">Close</button>
 		</div>
+		<div class="square"></div>
 	</div>
 	<script src='http://code.jquery.com/jquery-3.3.1.slim.min.js'></script>
 	<script src="./jquery.keyframes.min.js"></script>
