--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -64,13 +64,76 @@
 				</div>
 			</div>
 		</div>
-		<div id="certifications" class="section">
+		<div id="certifications" class="section no-vert">
 			<div class="container">
-				<h2>Certifications</h2>
+				<div class="section-title">
+					<h2>Certifications</h2>
+					<hr>
+				</div>
 				<div class="grid column-center">
-					<div class="column">Veeva</div>
-					<div class="column">IQVIA OCE</div>
-					<div class="column">IQVIA eContent</div>
+					<div class="column">
+						<div class="logo-container" onclick="openCertModal(this, 'veeva')">
+							<img src="./img/cert/veeva_logo.png">
+						</div>
+					</div>
+					<div class="column">
+						<div class="logo-container" onclick="openCertModal(this, 'oce')">
+							<img src="./img/cert/iqvia_oce_logo.png">
+						</div>
+					</div>
+					<div class="column">
+						<div class="logo-container" onclick="openCertModal(this, 'econtent')">
+							<img src="./img/cert/iqvia_econtent_logo.png">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="cert-modal">
+				<div class="modal-content">
+					<div class="close-btn" onclick="closeCertModal()"><span>&times;</span></div>
+					<div class="cert-content">
+						<div id="veeva">
+							<h3><span>Veeva</span></h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.
+
+							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<div class="cert-icon-container">
+								<div class="icon">
+									<img src="./img/cert/veeva_clm.png">
+								</div>
+								<div class="icon">
+									<img src="./img/cert/veeva_email.png">
+								</div>
+								<div class="icon">
+									<img src="./img/cert/veeva_engage.png">
+								</div>
+							</div>
+						</div>
+						<div id="oce">
+							<h3><span>IQVIA OCE</span></h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.
+
+							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+						<div id="econtent">
+							<h3>IQVIA eContent</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.
+
+							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -104,9 +167,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="section fp-auto-height-responsive">
-			<div id="how-we-work" class="container">
-				<div class="title">
+		<div id="how-we-work" class="section fp-auto-height-responsive">
+			<div class="container">
+				<div class="section-title">
 					<h2>How We Work</h2>
 					<hr>
 				</div>
@@ -208,69 +271,11 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="./js/jquery.slim.min.js"></script>
+	<script type="text/javascript" src="./js/fullpage.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.bbslider.custom.min.js"></script>
+	<script type="text/javascript" src="./js/jquery.keyframes.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.vmap.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.vmap.world.js"></script>
-	<script type="text/javascript" src="./js/fullpage.min.js"></script>
-	<script type="text/javascript">
-
-
-		new fullpage('#fullpage', {
-			licenseKey:'8C4EBEC6-9FCF4B75-B31BA128-7DF9ADB6',
-			autoScrolling:true,
-			// anchors:['home', 'eDetailers', 'certifications','services', 'how-we-work', 'map','about', 'contact'],
-			navigation: true,
-			navigationTooltips: ['Home', 'eDetailers', 'Certifications','Services', 'How We Work', 'Map','About', 'Contact'],
-			responsiveWidth: 600,
-			css3: true,
-			slideSelector: null,
-			scrollbar: true,
-		});
-
-		$('.slider').bbslider({
-			auto: true,
-			timer: 4000,
-			loop: true,
-			duration: 666,
-			pager: true,
-			pagerWrap: '.pager'
-		});
-
-
-		const COUNTRIES = ['ch', 'gb', 'at', 'dk', 'de', 'fr', 'ie', 'mx', 'ar', 'sg', 'kr', 'my', 'be', 'hk', 'au', 'us', 'za'];
-		$(document).ready(function() {
-			$('#vmap').vectorMap({
-				map: 'world_en',
-				backgroundColor: '#fff',
-				enableZoom: false,
-				selectedRegions: COUNTRIES,
-				selectedColor: '#83D0F4',
-				borderColor: '#AAA',
-				borderOpacity: 0.4,
-				borderWidth: 1,
-				hoverColor: '#3A3A9D',
-				scaleColors: ['#b6d6ff', '#005ace'],
-				pinMode: 'id',
-				pins: {'au': 'au_pin'},
-				onRegionClick: function(e, code){
-					if (COUNTRIES.indexOf(code) == -1) {
-						e.preventDefault();
-					}
-				},
-				onRegionOver: function(e, code) {
-					if (COUNTRIES.indexOf(code) == -1) {
-						e.preventDefault();
-					}
-				},
-				onLabelShow: function(e, label, code) {
-					console.log(code);
-					if (COUNTRIES.indexOf(code) == -1) {
-						e.preventDefault();
-					}
-				}
-			});
-		});
-		fullpage_api.setAllowScrolling(true);
-	</script>
+	<script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
