add support for css animations

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -63,8 +63,8 @@
 			<div class="container">
 				<div class="grid">
 					<div class="column info-panel">
-						<h1>eDetailer Development</h1>
-						<hr>
+						<h1>eDetailer<span class="light-blue-underline"> Development</span></h1>
+						<br>
 						<div>
 							<p>We develop visual aid (eDetailing) campaigns that utilise the full potential of your chosen multichannel platform.</p>
 							<p>We are platform agnostic and certified with Veeva, IQVIA MiTouch, IQVIA OCE and Viseven.</p>
@@ -74,9 +74,9 @@
 					<div class="column bigger"></div>
 				</div>
 				<div class="grid column-center service-panel">
-					<div class="column">eDetailer Development<hr></div>
+					<div class="column">eDetailer<br>Development<hr></div>
 					<div class="column">Certified with Veeva,<br> OCE and IQVIA<hr></div>
-					<div class="column">Asset<br> Management<hr></div>
+					<div class="column">Asset<br>Management<hr></div>
 					<div class="column">Translations &<br> Localisations<hr></div>
 				</div>
 			</div>
@@ -84,8 +84,7 @@
 		<div id="certifications-section" class="section no-vert">
 			<div class="container">
 				<div class="section-title">
-					<h2>Certifications</h2>
-					<hr>
+					<h2><span class="light-blue-underline">Certifications</span></h2>
 				</div>
 				<div class="grid column-center">
 					<div class="column">
@@ -187,14 +186,18 @@
 		<div id="how-we-work-section" class="section fp-auto-height-responsive">
 			<div class="container bigger">
 				<div class="section-title">
-					<h2>How We Work</h2>
-					<hr>
+					<h2><span class="light-blue-underline">How We Work</span></h2>
 				</div>
 				<div class="grid column work-selector">
-					<span class="column active" onclick="howWeWorkHandler(this, 'model')"><span>Our Model</span></span>
-					<span class="column" onclick="howWeWorkHandler(this, 'process')"><span>Our Process</span></span>
+					<span class="column"><span class="active" onclick="howWeWorkHandler(this, 'model')">Our Model</span></span>
+					<span class="column"><span onclick="howWeWorkHandler(this, 'process')">Our Process</span></span>
 				</div>
-				<div id="model" class="grid work-container active">
+				<div id="model" class="grid work-container active container no-padding">
+					<div class="timeline grid">
+						<div class="column"><div class="dot one"><span class="line one"></span></div></div>
+						<div class="column"><div class="dot two"><span class="line two"></span></div></div>
+						<div class="column"><div class="dot three"><span class="line three"></span></div></div>
+					</div>
 					<div class="column">
 						<h3>Partnership</h3>
 						<p>We align ourselves to your operational and cultural needs. We’re confident in our development strengths and know where and how to work with agencies and specialist in your country.</p>
@@ -208,7 +211,14 @@
 						<p>We’re an open book. You’ll always have complete clarity on what is being done, by who, when and at what cost.</p>
 					</div>
 				</div>
-				<div id="process" class="grid work-container">
+				<div id="process" class="grid work-container container no-padding bigger">
+					<div class="timeline grid">
+						<div class="column"><div class="dot one"><span class="line one"></span></div></div>
+						<div class="column"><div class="dot two"><span class="line two"></span></div></div>
+						<div class="column"><div class="dot three"><span class="line three"></span></div></div>
+						<div class="column"><div class="dot four"><span class="line four"></span></div></div>
+						<div class="column"><div class="dot five"><span class="line five"></span></div></div>
+					</div>
 					<div class="column">
 						<h3>The Brief</h3>
 						<p>We start by exploring what you need and how this can be achieved. We work with you to establish a clear brief</p>
@@ -237,7 +247,7 @@
 		</div>
 		<div id="map-section" class="section">
 			<div class="container no-max-width no-padding">
-				<h2>Our Clients all over globe</h2>
+				<h2><span class="light-blue-underline">Our Clients all over globe</span></h2>
 				<div class="map-container">
 					<div id="jvectormap"></div>
 				</div>
@@ -248,8 +258,8 @@
 				<div class="grid">
 					<div class="column no-padding">
 						<div class="info-panel">
-							<h2>About Us</h2>
-							<hr class="left">
+							<h2><span class="light-blue-underline">About Us</span></h2>
+							<br>
 							<div>
 								<p>Vakils Premedia is a subsidiary of Vakils, a family business for over 70 years now.</p>
 								<p>It was founded in 2004 and began operations in 2007. We are based in India with a team size of 120 and with sales offices in the UK and the US.</p>
@@ -269,7 +279,7 @@
 							</div>
 							<div class="column">
 								<div class="about-icon">
-									<img src="./img/pharma_artwork.svg">
+									<img class="bigger" src="./img/pharma_artwork.svg">
 								</div>
 								<h3>Pharma Artwork</h3>
 								<p>Pharmaceutical Artwork and Labeling Compliance.</p>
@@ -288,8 +298,8 @@
 		</div>
 		<div  id="contact-section" class="section">
 			<div class="container">
-				<h2>Let’s work together</h2>
-				<hr class="left">
+				<h2><span class="light-blue-underline">Let’s work together</span></h2>
+				<br>
 				<div>
 					<h3>Contact</h3>
 					<div>
