edetailer images, animations on almost every section

--- a/premedia/edetailers/index.html
+++ b/premedia/edetailers/index.html
@@ -71,7 +71,10 @@
 							<p>We’re a centralized development agency. We look after your assets, offer translation and localization services and maximize the use of your assets.</p>
 						</div>
 					</div>
-					<div class="column bigger"></div>
+					<div class="column bigger no-padding image-panel">
+						<img src="./img/edetail1.jpg">
+						<img src="./img/edetail2.jpg">
+					</div>
 				</div>
 				<div class="grid column-center service-panel">
 					<div class="column">eDetailer<br>Development<hr></div>
@@ -110,13 +113,9 @@
 					<div class="cert-content">
 						<div id="veeva">
 							<h3><span>Veeva</span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.
+							<p>Veeva is a global leader in the supply of cloud based software for the global life sciences industry. We are proud to be certified as a Veeva Level __ Multichannel Content Partner – the highest level of accreditation – making us one of a few select agencies around the world that provide the best in class service across the Veeva ecosystem.</p>
 
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>We are certified to develop tablet materials for Veeva CRM, design and develop Rep triggered emails and develop material used in remote detailing.</p>
 							<div class="cert-icon-container">
 								<div class="icon">
 									<img src="./img/cert/veeva_clm.png">
@@ -131,23 +130,14 @@
 						</div>
 						<div id="oce">
 							<h3><span>IQVIA OCE</span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.
-
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>OCE is an innovative strategy that enables Life Sciences companies to integrate customer-engagement activities across the organization, powered by strong information management.</p>
+							<p>We are certified to to navigate IQVIA’s revolutionary Orchestrated Customer Engagement Platform as well as to create platform-compliant content.</p>
+							<p>We have created OCE visual aids (e-Detailers) for several markets across Europe, Asia Pacific and South Africa.</p>
 						</div>
 						<div id="econtent">
 							<h3>IQVIA eContent</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur.
-
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>MI Touch is a platform, similar to Veeva, allowing for delivery via an iPad of HTML based slides from a cloud-based technology solution.</p>
+							<p>We are certified to develop material for MiTouch and have created iDetailers across European markets in the pharmaceutical industry.</p>
 						</div>
 					</div>
 				</div>
@@ -158,27 +148,20 @@
 				<div class="grid">
 					<div class="column development">
 						<h3>Development</h3>
-						<p>
-							We provide full translation services, focusing on technical precision and accurately sharing information with the support of best-in-class technology.
-						</p>
+						<p>We design and develop HTML5 visual aids using the platform of your choice. Our team of developers are experienced in eDetailer development and supported by strong design and quality check teams.</p>
 					</div>
 					<div class="column localisation">
 						<h3>Localisation</h3>
-						<p>
-							We use assets to localise edetailers to meet your countries requirements
-						</p>
+						<p>We use existing assets to localise edetailers to meet your country’s requirements, minimising cost and ensuring short delivery cycles.</p>
 					</div>
 					<div class="column translation">
 						<h3>Translation</h3>
-						<p>
-							We provide full translation services, focusing on technical precision and accurately sharing information with the support of best-in-class technology.
-						</p>
+						<p>We provide full translation services, focusing on technical precision and accurately sharing information with the support of best-in-class technology.</p>
 					</div>
 					<div class="column transcreation">
 						<h3>Transcreation</h3>
-						<p>
-							We make sure the intended effect of your message doesn’t get lost in translation. We ensure your copy remains natural, culturally relevant, and dynamic—worldwide.
-						</p>
+						<p>We also provide transcreation services. Ensuring maximum resonance in every region and market you serve.</p>
+						<p>We make sure the intended effect of your message doesn’t get lost in translation. We ensure your copy remains natural, culturally relevant, and dynamic—worldwide.</p>
 					</div>
 				</div>
 			</div>
@@ -198,15 +181,15 @@
 						<div class="column"><div class="dot two"><span class="line two"></span></div></div>
 						<div class="column"><div class="dot three"><span class="line three"></span></div></div>
 					</div>
-					<div class="column">
+					<div class="column one">
 						<h3>Partnership</h3>
 						<p>We align ourselves to your operational and cultural needs. We’re confident in our development strengths and know where and how to work with agencies and specialist in your country.</p>
 					</div>
-					<div class="column">
+					<div class="column two">
 						<h3>Flexible Delivery</h3>
 						<p>With the use of video conferencing, online meetings and efficient file sharing, we provide a connected and seamless service that works for you, irrespective of where you are.</p>
 					</div>
-					<div class="column">
+					<div class="column three">
 						<h3>Transparency</h3>
 						<p>We’re an open book. You’ll always have complete clarity on what is being done, by who, when and at what cost.</p>
 					</div>
@@ -219,23 +202,23 @@
 						<div class="column"><div class="dot four"><span class="line four"></span></div></div>
 						<div class="column"><div class="dot five"><span class="line five"></span></div></div>
 					</div>
-					<div class="column">
+					<div class="column one">
 						<h3>The Brief</h3>
 						<p>We start by exploring what you need and how this can be achieved. We work with you to establish a clear brief</p>
 					</div>
-					<div class="column">
+					<div class="column two">
 						<h3>Planning</h3>
 						<p>We define the project scope and establish the most efficient way to do it</p>
 					</div>
-					<div class="column">
+					<div class="column three">
 						<h3>Design</h3>
 						<p>We create a visual framework from concept to wireframe to final product</p>
 					</div>
-					<div class="column">
+					<div class="column four">
 						<h3>Build</h3>
 						<p>We take the visual design and create a product that performs the way you need it to</p>
 					</div>
-					<div class="column">
+					<div class="column five">
 						<h3>Launch</h3>
 						<p>We have stringent quality checks and work on staging links before the final go live</p>
 					</div>
@@ -301,14 +284,14 @@
 				<h2><span class="light-blue-underline">Let’s work together</span></h2>
 				<br>
 				<div>
-					<h3>Contact</h3>
+					<h3>Talk to Us</h3>
 					<div>
-						<p>urvashi@vakilspremedia.com</p>
+						<p>info@vakilspremedia.com</p>
 						<p>+91 22 2430 6780</p>
 					</div>
 				</div>
 				<div>
-					<h3>Address</h3>
+					<h3>Visit Us</h3>
 					<div>
 						<p>Industry Manor, 2nd Floor</p>
 						<p>Appasaheb Marathe Marg,</p>
